fixsed stream bug
